--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^5.0.0",
