--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "preload-fonts": "gatsby-preload-fonts"
   },
   "dependencies": {
+    "@types/react-animate-on-scroll": "^2.1.4",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.3.7",
     "gatsby": "^4.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -25,14 +27,19 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-preload-fonts": "^3.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "postcss": "^8.3.11",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^2.2.17"
+  },
+  "devDependencies": {
+    "postcss-hover-media-feature": "^1.0.1"
   }
 }
